# Smash.io

./: .gitignore  CMakeLists.txt  README.md
AI/: info.txt  ssbm.h5
Files/Config/: Dolphin.ini  GCPadNew.ini  Hotkeys.ini
Py/: trainer.py
Python/: trainer.py
Src/: Config.cpp  Config.h  Controller.cpp  Controller.h  DolphinHandle.cpp  DolphinHandle.h  GameState.h  GenerationManager.cpp  GenerationManager.h  Main.cpp  MemoryScanner.cpp  MemoryScanner.h  MemoryWatcher.cpp  MemoryWatcher.h  Player.h  TensorHandler.cpp  TensorHandler.h  Trainer.cpp  Trainer.h  Types.h  addresses.h
Test Files/: loc.txt  mem.cpp  nmemory.cpp  test.cpp  test.py  util.h
Version/: version.txt
